Fixed alignment of meeting type message

--- a/src/officehours_ui/static/css/main.css
+++ b/src/officehours_ui/static/css/main.css
@@ -632,3 +632,12 @@ div[role=main] {
 .required {
 	color: #cc0000;
 }
+
+.meeting-type-text-container {
+	display: flex;
+	align-items: flex-end;
+}
+
+.meeting-type-message {
+	padding-left: 5px
+}
